css/PicoCssModified.css
/*!
* Pico.css v1.4.1 (https://picocss.com)
* Copyright 2019-2021 - Licensed under MIT
* Modified for Poshtml project
*/


/**
* Theme: default
*/

@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.0/font/bootstrap-icons.css");
 :root {
    --font-family: system-ui, -apple-system, "Segoe UI", "Roboto", "Ubuntu", "Cantarell", "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --line-height: 1.5;
    --font-weight: 400;
    --font-size: 16px;
    --border-radius: 0.25rem;
    --border-width: 1px;
    --outline-width: 3px;
    --spacing: 1rem;
    --typography-spacing-vertical: 1.5rem;
    --block-spacing-vertical: calc(var(--spacing) * 2);
    --block-spacing-horizontal: var(--spacing);
    --grid-spacing-vertical: 0;
    --grid-spacing-horizontal: var(--spacing);
    --form-element-spacing-vertical: 0.75rem;
    --form-element-spacing-horizontal: 1rem;
    --transition: 0.2s ease-in-out;
}

@media (min-width: 576px) {
     :root {
        --font-size: 17px;
    }
}

@media (min-width: 768px) {
     :root {
        --font-size: 18px;
    }
}

@media (min-width: 992px) {
     :root {
        --font-size: 19px;
    }
}

@media (min-width: 1200px) {
     :root {
        --font-size: 20px;
    }
}

@media (min-width: 576px) {
    body>header,
    body>main,
    body>footer,
    section {
        --block-spacing-vertical: calc(var(--spacing) * 2.5);
    }
}

@media (min-width: 768px) {
    body>header,
    body>main,
    body>footer,
    section {
        --block-spacing-vertical: calc(var(--spacing) * 3);
    }
}

@media (min-width: 992px) {
    body>header,
    body>main,
    body>footer,
    section {
        --block-spacing-vertical: calc(var(--spacing) * 3.5);
    }
}

@media (min-width: 1200px) {
    body>header,
    body>main,
    body>footer,
    section {
        --block-spacing-vertical: calc(var(--spacing) * 4);
    }
}

@media (min-width: 576px) {
    article {
        --block-spacing-horizontal: calc(var(--spacing) * 1.25);
    }
}

@media (min-width: 768px) {
    article {
        --block-spacing-horizontal: calc(var(--spacing) * 1.5);
    }
}

@media (min-width: 992px) {
    article {
        --block-spacing-horizontal: calc(var(--spacing) * 1.75);
    }
}

@media (min-width: 1200px) {
    article {
        --block-spacing-horizontal: calc(var(--spacing) * 2);
    }
}

a {
    --text-decoration: none;
}

a.secondary,
a.contrast {
    --text-decoration: underline;
}

small {
    --font-size: 0.875em;
}

h1,
h2,
h3,
h4,
h5,
h6 {
    --font-weight: 700;
}

h1 {
    --font-size: 2rem;
    --typography-spacing-vertical: 3rem;
}

h2 {
    --font-size: 1.75rem;
    --typography-spacing-vertical: 2.625rem;
}

h3 {
    --font-size: 1.5rem;
    --typography-spacing-vertical: 2.25rem;
}

h4 {
    --font-size: 1.25rem;
    --typography-spacing-vertical: 1.874rem;
}

h5 {
    --font-size: 1.125rem;
    --typography-spacing-vertical: 1.6875rem;
}

[type=checkbox],
[type=radio] {
    --border-width: 2px;
}

[type=checkbox][role=switch] {
    --border-width: 3px;
}

thead th,
thead td {
    --border-width: 3px;
}

 :not(thead)>*>td {
    --font-size: 0.875em;
}

pre,
code,
kbd,
samp {
    --font-family: "Menlo", "Consolas", "Roboto Mono", "Ubuntu Monospace", "Noto Mono", "Oxygen Mono", "Liberation Mono", monospace, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
}

kbd {
    --font-weight: bolder;
}
/* ... */

